# agentreplay

./: .env.example  .gitignore  Makefile  go.mod  pyproject.toml  readme.md
cmd/agentreplay/: main.go  main_test.go
docs/: architecture.md  cassette-format.md  payload-privacy.md  replay-semantics.md
internal/cassette/: diff.go  diff_test.go  event.go  hash.go  hash_test.go  privacy.go  privacy_contract_test.go  reader.go  replay.go  replay_test.go  testgen.go  testgen_test.go  validator.go  validator_test.go  writer.go  writer_test.go
python/: README.md  pyproject.toml
python/agentreplay/: __init__.py  cassette_writer.py  hashing.py  openai_hook.py  privacy.py  pytest.py
python/examples/: langgraph_demo.py  openai_record_smoke.py  openai_replay_smoke.py
python/tests/: test_examples.py  test_hashing.py  test_openai_hook.py  test_privacy_contract.py  test_pytest_helper.py
traces/: sample.replay.jsonl
